2006-11-04  Mickael Remond  <mickael.remond@process-one.net>

	* src/eldap_utils.erl: Fixed missing export.
	
	* src/odbc/pg.sql: Database scripts consistency.
	* src/odbc/mysql.sql: Likewise.
	* src/odbc/mssql.sql: Likewise.

	* src/odbc/mysql: Database creation script should now be compliant with
	MySQL 4.0.x.

2006-10-29  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: XEP-0065 proxy documentation (thanks to Evgeniy
	Khramtsov).

2006-10-28  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd.cfg.example: Changed the anonymous example a bit to work
	in most cases.
	* doc/guide.tex: Likewise.

2006-10-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_proxy65/: XEP-0065 proxy (thanks to Evgeniy Khramtsov)
	* src/Makefile.win32: Likewise
	* src/Makefile.in: Likewise
	* src/configure.ac: Likewise
	* src/jlib.hrl: Likewise
	* src/ejabberd.hrl: Added the ejabberd URL

2006-10-27  Mickael Remond  <mickael.remond@process-one.net>
	
	* src/guide.tex: Fixed typos.

2006-10-25  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_rdbms.erl: It is now possible to use ldap or internal
	authentication with some other modules using relationnal database
	storage. Refactored relational databases connections initialisation.
	* src/ejabberd_auth_odbc.erl: Likewise. odbc supervisor startup is now
	delegated to the ejabberd rdbms module.
	* src/ejabberd_app.erl: Likewise.

2006-10-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_socket.erl: Added sockname/1 and peername/1
	functions
	* src/ejabberd_frontend_socket.erl: Likewise
	* src/tls/tls.erl: Likewise
	* src/ejabberd_zlib/ejabberd_zlib.erl: Likewise

	* src/mod_private_odbc.erl: Private storage support using odbc
	* src/odbc/pg.sql: Likewise

2006-10-17 Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_auth_ldap.erl: LDAP authentication now allows to
	match on several alternative attributes (thanks to Evgeniy
        Khramtsov).